[fix] fixed tab no name error by placing them behind the div containers

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10014,4 +10014,6 @@ h3 {
   padding: 5px;
   height: 40px;
   width: 37px;
+  position: relative;
+  z-index: -1;
 }
