--- a/resources/sass/_interface.scss
+++ b/resources/sass/_interface.scss
@@ -10,6 +10,8 @@
             padding: 5px;
             height: 40px;
             width: 37px;
+            position: relative;
+            z-index: -1;
         }
     }
 }
